[fix] overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -142,9 +142,12 @@ button:focus:not(:focus-visible) {
 
 #app,
 .page {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
+
+	overflow-y: hidden;
 }
 
 .scroller {
